--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bubu, Will You Be My Valentine?</title>
+  <title>Will You Be My Valentine?</title>
   <!-- Google Fonts for a playful, modern look -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Will you be my Valentine? &#10084;</h1>
+    <h1>Bubu, Will you be my Valentine? &#10084;</h1>
     <button id="yes" onclick="yesClicked()">Yes</button>
     <!-- The "No" button is included in the HTML for semantic grouping,
          but its fixed positioning lets it roam anywhere on the screen -->
